# undo

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md  add.rs  push.rs
.github/workflows/: rust.yml
examples/: display.rs  group.rs  history.rs  merge.rs  pop.rs  record.rs  record_any.rs  unsafe_pop.rs
src/: add.rs  any.rs  chain.rs  checkpoint.rs  command.rs  display.rs  doctest.rs  doctest_setup.rs  entry.rs  format.rs  from_fn.rs  group.rs  history.rs  join.rs  lib.rs  merge.rs  queue.rs  record.rs  signal.rs  slot.rs  socket.rs  stack.rs  timeline.rs
src/history/: builder.rs  checkpoint.rs  display.rs  queue.rs
src/record/: builder.rs  checkpoint.rs  display.rs  queue.rs
tests/: history.rs  record.rs
