[package]
name = "undo"
version = "0.49.0"
authors = ["evenorog <evenorog@gmail.com>"]
description = "An undo-redo library."
documentation = "https://docs.rs/undo"
repository = "https://github.com/evenorog/undo"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["undo", "redo"]
categories = ["data-structures"]
edition = "2021"

[dependencies]
colored = { version = "2", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
features = ["colored", "serde"]
