[package]
name = "undo"
version = "0.52.0"
authors = ["evenorog <evenorog@gmail.com>"]
description = "An undo-redo library."
documentation = "https://docs.rs/undo"
repository = "https://github.com/evenorog/undo"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["undo", "redo"]
categories = ["data-structures"]
edition = "2024"

[dependencies]
colored = { version = "3", optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
slab = { version = "0.4", default-features = false }

[dev-dependencies]
chrono = "0.4"

[features]
default = ["std"]
std = ["alloc", "serde?/std"]
alloc = ["serde?/alloc"]
serde = ["dep:serde", "slab/serde"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
features = ["colored", "serde"]
